[tool.poetry]
name = "ounce"
version = "1.1.1"
description = "Fast, simple, non-fancy, and non-magical package for manipulating units of measure"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize, Body Labs, and other contributors"]
license = "BSD-2-Clause"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://ounce.readthedocs.io/en/stable/"
repository = "https://github.com/lace/ounce"
documentation = "https://ounce.readthedocs.io/en/stable/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",

]

[tool.poetry.dependencies]
python = ">=3.7,<4"

[tool.poetry.dev-dependencies]
executor = "23.2"
click = "8.1.3"
pytest = "7.1.2"
pytest-cov = "3.0.0"
flake8 = "4.0.1"
black = "22.6.0"
coverage = "6.3.3"
flake8-import-order = "0.18.1"
Sphinx = "4.2.0"
sphinxcontrib-apidoc = "0.3.0"
myst-parser = "0.17.2"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100.0
omit = ["**/test_*.py"]
